clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_swap<float> = rocblas_sswap;
template <>
static constexpr auto rocblas_swap<double> = rocblas_dswap;
template <>
static constexpr auto rocblas_swap<rocblas_float_complex> = rocblas_cswap;
template <>
static constexpr auto rocblas_swap<rocblas_double_complex> = rocblas_zswap;
template <>
static constexpr auto rocblas_dot_batched<rocblas_bfloat16> = rocblas_bfdot_batched;
template <>
static constexpr auto rocblas_dot_batched<rocblas_float_complex> = rocblas_cdotu_batched;
template <>
static constexpr auto rocblas_dot_batched<rocblas_double_complex> = rocblas_zdotu_batched;
template <>
static constexpr auto rocblas_dotc_batched<rocblas_float_complex> = rocblas_cdotc_batched;
template <>
static constexpr auto rocblas_dotc_batched<rocblas_double_complex> = rocblas_zdotc_batched;
template <>
static constexpr auto rocblas_dot_strided_batched<float> = rocblas_sdot_strided_batched;
template <>
static constexpr auto rocblas_dot_strided_batched<double> = rocblas_ddot_strided_batched;
template <>
static constexpr auto rocblas_dot_strided_batched<rocblas_half> = rocblas_hdot_strided_batched;
template <>
static constexpr auto rocblas_dot_strided_batched<rocblas_bfloat16> = rocblas_bfdot_strided_batched;
template <>
static constexpr auto
    rocblas_dot_strided_batched<rocblas_float_complex> = rocblas_cdotu_strided_batched;
template <>
static constexpr auto
    rocblas_dot_strided_batched<rocblas_double_complex> = rocblas_zdotu_strided_batched;
template <>
static constexpr auto
    rocblas_dotc_strided_batched<rocblas_float_complex> = rocblas_cdotc_strided_batched;
template <>
static constexpr auto
    rocblas_dotc_strided_batched<rocblas_double_complex> = rocblas_zdotc_strided_batched;